# python-isbinary

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  tasks.py
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py  index.rst  installation.rst  isbinary.rst  modules.rst  quickstart.rst
isbinary/: __init__.py  __main__.py  _chardet.py  check.py  cli.py  helpers.py
tests/: conftest.py  test_check.py  test_cli.py  test_is_binary_file.py  test_is_binary_file_fuzz.py  test_symlinks.py  test_weird_files.py
